# dashscript

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
apps/ds/: Cargo.toml
apps/ds/src/: lsp.rs  main.rs
apps/ds/src/commands/: cache.rs  check.rs  deps.rs  project.rs
crates/dashscript/: Cargo.toml
crates/dashscript/src/: bindgen.rs  fetch.rs  lib.rs  manifest.rs
crates/dashscript/src/translator/: analysis.rs  bindings.rs  check.rs  class.rs  context.rs  declarations.rs  expressions.rs  flavor.rs  functions.rs  globals.rs  imports.rs  mod.rs  name_table.rs  registry.rs  semantic.rs  types.rs
crates/dashscript/src/translator/builtins/: array.ds  array.rs  collection.rs  console.ds  console.rs  global.ds  global.rs  json.rs  math.ds  math.rs  mod.rs  number.ds  number.rs  object.ds  object.rs  string.ds  string.rs  temporal.rs
crates/dashscript/src/translator/builtins/node/: mod.rs
crates/dashscript/src/translator/expressions/: array.rs  assignment.rs  binary.rs  call.rs  fmt_merge.rs  literals.rs  logical.rs  math.rs  member.rs  methods.rs  mod.rs  new.rs  object.rs  unary.rs
crates/dashscript/src/translator/expressions/methods/: array.rs  mod.rs  number.rs  string.rs
crates/dashscript/src/translator/functions/: control_flow.rs  destructure.rs  mod.rs  switch.rs
crates/dashscript/src/translator/tests/: arrays.rs  bindings.rs  check.rs  classes.rs  clone_move.rs  collections.rs  console.rs  control_flow.rs  destructuring.rs  fmt.rs  globals.rs  json.rs  math.rs  mod.rs  modules.rs  narrowing.rs  number_methods.rs  operators.rs  runtime_deps.rs  strings.rs  types.rs
crates/dashscript/tests/: conformance.rs
crates/dashscript/tests/conformance/: matrix.json  matrix.md
crates/dashscript/tests/conformance/data/: bcd-catalog.json  correctness.json  test262.json  tests-fixtures.json
crates/dashscript/tests/conformance/data/test262/: abstractmodulesource.json  aggregateerror.json  array.json  arraybuffer.json  arrayiteratorprototype.json  asyncdisposablestack.json  asyncfromsynciteratorprototype.json  asyncfunction.json  asyncgeneratorfunction.json  asyncgeneratorprototype.json  asynciteratorprototype.json  atomics.json  bigint.json  boolean.json  dataview.json  date.json  decodeuricomponent.json  disposablestack.json  error.json  eval.json  finalizationregistry.json  function.json  generatorfunction.json  generatorprototype.json  global.json  infinity.json  isfinite.json  isnan.json  iterator.json  json.json  map.json  math.json  nan.json  nativeerrors.json  number.json  object.json  parsefloat.json  parseint.json  promise.json  proxy.json  (+18 more)
crates/dashscript/tests/conformance/matrix/: README.md  correctness.json  correctness.md  test262-abstractmodulesource.json  test262-abstractmodulesource.md  test262-aggregateerror.json  test262-aggregateerror.md  test262-array.json  test262-array.md  test262-arraybuffer.json  test262-arraybuffer.md  test262-arrayiteratorprototype.json  test262-arrayiteratorprototype.md  test262-asyncdisposablestack.json  test262-asyncdisposablestack.md  test262-asyncfromsynciteratorprototype.json  test262-asyncfromsynciteratorprototype.md  test262-asyncfunction.json  test262-asyncfunction.md  test262-asyncgeneratorfunction.json  test262-asyncgeneratorfunction.md  test262-asyncgeneratorprototype.json  test262-asyncgeneratorprototype.md  test262-asynciteratorprototype.json  test262-asynciteratorprototype.md  test262-atomics.json  test262-atomics.md  test262-bigint.json  test262-bigint.md  test262-boolean.json  test262-boolean.md  test262-dataview.json  test262-dataview.md  test262-date.json  test262-date.md  test262-decodeuricomponent.json  test262-decodeuricomponent.md  test262-disposablestack.json  test262-disposablestack.md  test262-error.json  (+81 more)
examples/bench/: .gitignore  README.md  results.json  run.mjs
examples/bench/array-ops/: main.ds  main.ts  manifest.json
examples/bench/array-read/: main.ds  main.ts  manifest.json
examples/bench/array-write/: main.ds  main.ts  manifest.json
examples/bench/binary-trees/: main.ds  main.ts  manifest.json
examples/bench/closure/: main.ds  main.ts  manifest.json
examples/bench/factorial/: main.ds  main.ts  manifest.json
examples/bench/fib/: main.ds  main.ts  manifest.json
examples/bench/int-add/: main.ds  main.ts  manifest.json
examples/bench/levenshtein/: main.ds  main.ts  manifest.json
examples/bench/loop-data-dependent/: main.ds  main.ts  manifest.json
examples/bench/mandelbrot/: main.ds  main.ts  manifest.json
examples/bench/matrix-multiply/: main.ds  main.ts  manifest.json
examples/bench/method-calls/: main.ds  main.ts  manifest.json
examples/bench/nested-loops/: main.ds  main.ts  manifest.json
examples/bench/object-create/: main.ds  main.ts  manifest.json
examples/bench/primes/: main.ds  main.ts  manifest.json
examples/bench/str-concat/: main.ds  main.ts  manifest.json
examples/bench/string-ops/: main.ds  main.ts  manifest.json
examples/bindgen-demo/: README.md  geometry.ds  geometry.rs
examples/crate-add/: README.md  main.ds  manifest.json
examples/feature-tour/: README.md  arrays.ds  classes.ds  control-flow.ds  declarations.ds  destructuring.ds  functions.ds  globals.ds  main.ds  manifest.json  math.ds  numbers.ds  operators.ds  records.ds  strings.ds
examples/hello-world/: README.md  main.ds  manifest.json
examples/workspace-demo/: README.md  manifest.json
examples/workspace-demo/apps/counter/: main.ds  manifest.json
examples/workspace-demo/apps/greeter/: main.ds  manifest.json
scripts/: extract-test262.mjs  extract-tests.mjs  sync-bcd.mjs
