[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Demo Macro <abc@imst.xyz>"]
license = "MIT"
repository = "https://github.com/DemoMacro/dashscript"
homepage = "https://github.com/DemoMacro/dashscript"
description = "TypeScript ergonomics, Rust performance, compiled to native."
keywords = ["typescript", "rust", "transpiler", "compiler"]
categories = ["compilers", "development-tools"]

[workspace.dependencies]
dashscript = { path = "crates/dashscript" }

# oxc — reused for parsing / lint / format. DashScript never reimplements these.
oxc_allocator = "0.140"
oxc_parser = "0.140"
oxc_ast = "0.140"
oxc_diagnostics = "0.140"
oxc_codegen = "0.140"
oxc_span = "0.140"
oxc_syntax = "0.140"

# Rust source emission (translator) — pulled in when codegen lands.
prettyplease = "0.2"
syn = { version = "2", default-features = false, features = [
  "parsing",
  "printing",
  "full",
  "clone-impls",
] }
quote = "1"
proc-macro2 = "1"

# manifest.json → Cargo.toml
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
# Platform-standard cache dir (`~/.cache`, `~/Library/Caches`, `%LocalAppData%`)
# for `ds run`'s fixed build cache — see `dashscript::commands::project::cache_project_dir`.
dirs = "5"

# ds CLI (the `bin/` target on the `dashscript` crate) — LSP server + channels.
crossbeam-channel = "0.5"
lsp-server = "0.10.0"
lsp-types = "0.97.0"

# dev-only — the conformance test harness (`tests/conformance.rs`).
tempfile = "3"

[profile.release]
# A transpiler CLI: optimize the generated-binary experience.
opt-level = 3
lto = "thin"
codegen-units = 1
