[package]
name = "ds"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
dashscript = { workspace = true }
oxc_diagnostics = { workspace = true }
