[package]
name = "ds"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
dashscript = { workspace = true }
lsp-server = "0.10.0"
lsp-types = "0.97.0"
oxc_diagnostics = { workspace = true }
serde_json = { workspace = true }
